@@ -111,4 +111,32 @@
 			<artifactId>monix-bio_2.13</artifactId>
 		</dependency>
     </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.plugin}</version>
+				<configuration>
+					<encoding>${project.encoding}</encoding>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>jdk.incubator.foreign/jdk.incubator.foreign=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<configuration>
+					<javacArgs>
+						<arg>--add-exports</arg>
+						<arg>jdk.incubator.foreign/jdk.incubator.foreign=ALL-UNNAMED</arg>
+					</javacArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
